# fullstack_ac3

backend/: pyproject.toml
backend/app/: main.py
backend/app/dto/: OutputModel.py
backend/app/entities/: character.py
backend/app/router/: routers.py
backend/app/use_case/: Actions.py
web/: package.json  vite.config.ts
web/src/: App.tsx  styles.ts  types.ts
web/src/service/: index.ts
web/src/styles/: global.ts
